--- a/app/(public)/lp/candi/lp-globals.css
+++ b/app/(public)/lp/candi/lp-globals.css
@@ -117,10 +117,14 @@
 }
 
 @layer base {
+  html {
+    scroll-behavior: smooth;
+  }
   * {
     @apply border-border outline-ring/50;
   }
   body {
     @apply bg-background text-foreground;
+    font-feature-settings: "palt";
   }
 }
